--- a/src/assets/scss/md/_navbars.scss
+++ b/src/assets/scss/md/_navbars.scss
@@ -4,7 +4,7 @@
   border-radius: 3px;
 
   &.md-transparent {
-    background-color: transparent !important;
+    background-color: #ffffff !important;
     box-shadow: none;
 
     .md-title,
