--- a/src/assets/scss/md/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/md/_sidebar-and-main-panel.scss
@@ -308,6 +308,7 @@
 .main-panel {
   position: relative;
   float: right;
+  background-color: rgb(251,251,251);
   width: $sidebar-width;
   @include transition(0.33s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
