--- a/src/assets/scss/md/_fixed-plugin.scss
+++ b/src/assets/scss/md/_fixed-plugin.scss
@@ -104,6 +104,9 @@
   .badge-red {
     background-color: $brand-danger;
   }
+  .badge-va {
+    background-color: $brand-va;
+  }
 
   h5 {
     font-size: 14px;
